# Taoism-Mathematics-Research-Project-Internal

./: Phase-Calc-Taoism-Math.txt  README.md  git-command.txt
Active-Study/Analysis-Stages/Phase-5_Primitive_Generator/phase5_v7_closure_and_orientation/orthad_runtime_tests/orthad_coupling_echo/: MANIFEST_SHA256SUMS.txt  README.md  pyproject.toml
Active-Study/Analysis-Stages/Phase-5_Primitive_Generator/phase5_v7_closure_and_orientation/orthad_runtime_tests/orthad_coupling_echo/docs/: NEXT_STEPS.md  OBSTACLE_AND_DESIGN.md  RESULTS.md
Active-Study/Analysis-Stages/Phase-5_Primitive_Generator/phase5_v7_closure_and_orientation/orthad_runtime_tests/orthad_coupling_echo/lean/: OrthadCouplingEcho.lean  lakefile.lean
Active-Study/Analysis-Stages/Phase-5_Primitive_Generator/phase5_v7_closure_and_orientation/orthad_runtime_tests/orthad_coupling_echo/notebooks/: orthad_coupling_echo_smoke.ipynb
Active-Study/Analysis-Stages/Phase-5_Primitive_Generator/phase5_v7_closure_and_orientation/orthad_runtime_tests/orthad_coupling_echo/orthad_coupling_echo/: __init__.py  cli.py  coupling.py  echo.py  events.py  experiment.py  run_experiment.py  telemetry.py  trace.py
Active-Study/Analysis-Stages/Phase-5_Primitive_Generator/phase5_v7_closure_and_orientation/orthad_runtime_tests/orthad_coupling_echo/outputs/: echo_gain.csv  history_coupling_reports.json  history_summary.csv  result_card.json  telemetry_summary.csv
Active-Study/Analysis-Stages/Phase-5_Primitive_Generator/phase5_v7_closure_and_orientation/orthad_runtime_tests/orthad_voidwalker_overset/: README.md  pyproject.toml
(+1715 files in other folders)
