[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orthad-voidwalker-overset"
version = "0.1.0"
description = "Cutdown VDM-style void-walker overset topology harness for Orthad coupling extraction"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
